--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site</title>
     <link rel="stylesheet" href="css/style.css"
 </head>
 <body>
     <h1>GIT урок2</h1>
     <p>Новое изменение файла index.html</p>
+    <p>some text</p>
+    <p> la la la</p>
 </body>
 </html>
