--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="css/style.css"
 </head>
 <body>
-    <h1>GIT урок2</h1>
-    <p>Новое изменение файла index.html</p>
-    <p>some text</p>
-    <p> la la la</p>
+    <p>Forel використовувати конфігураційний файл для кожного робочого дерева</p>
 </body>
 </html>
